# CoreKB

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  docker-compose.observability.yml  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_permissions_and_async_indexing.py  0003_index_jobs.py  0004_table_retry_cancel.py  0005_audit_observability_pause.py  0006_backup_jobs.py  0007_alert_events.py  0008_evaluation_runs.py  0009_document_metadata.py  0010_assistant_evaluation_type.py  0011_evaluation_improvement_items.py  0012_evaluation_regressions.py  0013_evaluation_run_metadata.py  0014_evaluation_case_results.py  0015_evaluation_case_annotations.py  0016_evaluation_improvement_case_results.py  0017_document_metadata_suggestions.py  0018_metadata_dictionary.py  0019_validation_reports.py  0020_evaluation_failure_triage_notes.py  0021_maintenance_curation.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/core/: config.py  logging.py  metrics.py  request_context.py  security.py  tracing.py
backend/app/db/: base.py  session.py
backend/app/fixtures/: metadata_dictionary_entries.json
backend/app/metadata/: __init__.py  schemas.py  validation.py
backend/app/middleware/: rate_limit.py  request_logging.py
backend/app/models/: alert_event.py  audit_log.py  backup_job.py  base.py  conversation.py  document.py  evaluation_annotation.py  evaluation_improvement.py  evaluation_regression.py  (+9 more)
backend/scripts/: import_evaluation_fixtures.py
(+291 files in other folders)
