[project]
name = "corekb-backend"
version = "0.1.0"
description = "CoreKB lightweight enterprise knowledge base backend"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13.2",
  "email-validator>=2.2.0",
  "fastapi>=0.115.0",
  "flower>=2.0.1",
  "httpx>=0.27.0",
  "bcrypt>=4.0.1,<4.1",
  "celery[redis]>=5.4.0",
  "charset-normalizer>=3.3.2",
  "openpyxl>=3.1.5",
  "opentelemetry-api>=1.29.0",
  "opentelemetry-exporter-otlp-proto-grpc>=1.29.0",
  "opentelemetry-exporter-otlp-proto-http>=1.29.0",
  "opentelemetry-sdk>=1.29.0",
  "pandas>=2.2.2",
  "passlib[bcrypt]>=1.7.4",
  "prometheus-client>=0.21.0",
  "psycopg[binary]>=3.2.1",
  "pydantic-settings>=2.4.0",
  "pyjwt>=2.9.0",
  "pymupdf>=1.24.9",
  "python-docx>=1.1.2",
  "python-multipart>=0.0.9",
  "qdrant-client>=1.11.1",
  "sqlalchemy>=2.0.32",
  "uvicorn[standard]>=0.30.6",
  "xlrd>=2.0.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2",
  "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
testpaths = ["app/tests", "tests/evaluation"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
include = ["app*"]
